Review 2 - lots wrap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,8 +135,13 @@
   padding-top: 27px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 25px;
+}
+
+.showcase-lots-item {
+  flex-grow: 1;
+  width: 430px;
+  min-height: 450px;
 }
 
 .lot {
@@ -145,11 +150,9 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  width: 430px;
-  min-height: 450px;
   background-position: center;
   background-size: cover;
-  justify-self: stretch;
+  height: 100%;
 }
 
 .lot-film {
@@ -244,7 +247,7 @@
 }
 
 .footer {
-  padding: 182px 51px;
+  padding: 182px 51px 0 51px;
   display: grid;
   grid-template-columns: 2fr 1fr 2fr;
   align-items: flex-start;
